fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,12 @@ footer {
   margin: 0 auto;
 }
 
+.next {
+  text-decoration: none;
+  color: #000;
+  font-weight: bolder;
+}
+
 
 
 @media only screen and (min-width: 38em) {
